--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -162,6 +162,7 @@ a.noLink {
 }
 
 .content {
+    padding-top: 1px;
     height: CALC(100vh - var(--header-height));
 }
 
